# parashu

./: pyproject.toml
parashu/agents/agent_template/: Dockerfile  agent.yaml  requirements.txt
parashu/agents/agent_template/src/: agent.py
