[project]
name = "parashu"
version = "0.1.0"
description = "A modular agent orchestration platform"
authors = [
    {name = "Chirag Juneja",email = "chiragjuneja6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "ipython (>=9.9.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ollama = "^0.6.1"
pydantic-core = "^2.41.5"

